shiny-server 1.5.22
--------------------------------------------------------------------------------

* Implement support for Shiny Express syntax for Shiny for Python.

shiny-server 1.5.21
--------------------------------------------------------------------------------

* Increase the maximum allowable WebSocket message size that can be sent from
  the Shiny server to the browser, from 64MB to 512MB. (The maximum message size
  allowed from the browser to the server remains 64MB.)

* Migrate google_analytics_id implementation from Universal Analytics to modern
  gtag.js.

* Upgrade Node.js to 18.18.2. We also moved from using the official Node.js
  binaries to building our own, for compatibility with the older version of
  glibc used in RedHat/CentOS 7 (which the official binaries no longer support).

shiny-server 1.5.20
--------------------------------------------------------------------------------

* Support hosting of prerendered Quarto `server: shiny` interactive documents.
  Prerender the document before uploading by running `quarto serve index.qmd`,
  then deploy the generated index.html, index_files directory, and the source
  index.qmd together to be served by Shiny Server.

* Upgrade Node.js to 16.18.1.

shiny-server 1.5.19
--------------------------------------------------------------------------------

* Support hosting of Shiny for Python apps. For more information, see:
  https://shiny.rstudio.com/py/docs/deploy.html

shiny-server 1.5.18
--------------------------------------------------------------------------------

* Upgrade Node.js to 16.14.0.

shiny-server 1.5.17
--------------------------------------------------------------------------------

* `app_dir` config directives pointing to missing or unreadable directories on
  disk were causing errors during routing, even for requests intended for
  unrelated apps.

* Fix an issue where entire R processes would leak if: 1) they ever called